# outkast

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: Makefile  conf.py  index.rst
docs/source/: conf.py  index.rst  outkast.rst
outkast/: __init__.py  secc_caste_ln.py  utils.py
outkast/data/secc/: 01_download_secc.ipynb  02_clean_secc_recode.ipynb  02a_merge_secc.ipynb  02b_merge_secc_check.ipynb  03_outkast_dataset_state.ipynb  03a_prepare_secc_recode.ipynb  03b_prepare_secc_split.ipynb  04a_outkast_dataset_state0_9.ipynb  04b_outkast_dataset_state10_18.ipynb  04c_outkast_dataset_merged.ipynb  secc_state.csv
outkast/tests/: __init__.py  input.csv  test_010_secc_caste_ln.py
