[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outkast"
version = "1.0.0"
description = "Infer Caste from Indian Names"
readme = "README.rst"
license = "MIT"
authors = [
    {name = "Gaurav Sood", email = "gsood07@gmail.com"},
    {name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com"},
]
keywords = ["caste", "names", "india"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=0.19.2",
    "numpy>=1.22.2",
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage", "pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/appeler/outkast"
Repository = "https://github.com/appeler/outkast"
Issues = "https://github.com/appeler/outkast/issues"

[project.scripts]
secc_caste = "outkast.secc_caste_ln:main"

[tool.setuptools]
packages = ["outkast"]
include-package-data = true

[tool.setuptools.package-data]
outkast = ["data/secc/secc_all_state_year_ln_outkast.csv.gz"]

[tool.pytest.ini_options]
testpaths = ["outkast/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["outkast"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]